--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -21,6 +21,7 @@
       text-transform: uppercase;
       padding-left: $padding-left;
       font-size: 1.6rem;
+      letter-spacing: 0.2rem;
     }
   }
 
@@ -48,6 +49,7 @@
       text-transform: uppercase;
       font-size: 1.6rem;
       color: $color-grey;
+      letter-spacing: 0.15rem;
 
       &:hover {
         color: $color-black;
@@ -60,35 +62,35 @@
   }
 
   nav.active ul li {
-    transform: translateX(200px) rotateY(360deg);
+    transform: translateX(20rem) rotateY(360deg);
     opacity: 0;
     transition: transform 0.6s linear, opacity 0.6s linear;
   }
 
   .icon {
-    background-color: #fff;
+    background-color: $color-white;
     border: 0;
     cursor: pointer;
     position: relative;
-    height: 30px;
-    width: 30px;
+    height: 3rem;
+    width: 3rem;
     margin-left: 2rem;
     margin-bottom: 0.3rem;
   }
 
   .icon .line {
     background-color: $color-grey;
-    height: 2px;
-    width: 20px;
+    height: 0.2rem;
+    width: 2rem;
     position: absolute;
-    top: 10px;
-    left: 2px;
+    top: 1rem;
+    left: 0.2rem;
     transition: transform 0.6s linear;
   }
 
   .icon .line2 {
     top: auto;
-    bottom: 10px;
+    bottom: 1rem;
   }
 }
 
@@ -98,4 +100,9 @@ nav.active .icon .line1 {
 
 nav.active .icon .line2 {
   transform: rotate(765deg) translateY(-5.5px);
+}
+
+.icon:hover .line {
+  background-color: $color-black;
+  height: 0.2rem;
 }
