--- a/src/sass/_sideMenu.scss
+++ b/src/sass/_sideMenu.scss
@@ -7,11 +7,12 @@
   top: 0;
   transform: translateX(300);
   transition: 0.6s linear;
+  z-index: 5;
   &__list {
     list-style: none;
     position: absolute;
-    top: 120;
-    right: 25;
+    top: 12rem;
+    right: 2.5rem;
     z-index: 2;
   }
 
@@ -35,20 +36,20 @@
     justify-content: space-around;
     list-style: none;
     position: absolute;
-    bottom: 20;
+    bottom: 2rem;
     justify-content: space-around;
   }
 
   &__img {
     position: absolute;
-    bottom: -5;
+    bottom: -0.5rem;
     right: 0;
   }
 }
 
 .links {
   font-size: 4.8rem;
-  font-family: 'Bodoni Moda';
+  font-family: 'Bodoni Moda', serif;
   text-transform: uppercase;
 }
 
