--- a/src/sass/_sideMenu.scss
+++ b/src/sass/_sideMenu.scss
@@ -2,7 +2,7 @@
   background-color: $color-black;
   width: 29rem;
   height: 100vh;
-  position: fixed;
+  position: absolute;
   right: 0;
   top: 0;
   transform: translateX(300);
