--- a/src/sass/aboutMe.scss
+++ b/src/sass/aboutMe.scss
@@ -6,29 +6,16 @@
     margin-bottom: 10rem;
   }
 
+  &__img {
+    width: 50rem;
+  }
+
   &__description {
     display: flex;
     gap: 5rem;
     flex-direction: column;
     align-items: left;
     justify-content: center;
-
-    .subheding {
-      font-size: 4rem;
-      text-transform: uppercase;
-      font-family: 'Bodoni Moda', serif;
-      position: relative;
-      color: $color-black;
-
-      &:after {
-        content: '';
-        border-bottom: 2px solid $color-red;
-        position: absolute;
-        width: 20rem;
-        top: 7rem;
-        right: 23rem;
-      }
-    }
 
     p {
       font-size: 2.4rem;
