--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -35,7 +35,7 @@ body {
   margin: 20rem auto;
 }
 
-.subheding {
+.subheading {
   font-size: 4rem;
   text-transform: uppercase;
   font-family: 'Bodoni Moda', serif;
